--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "librocksdb-sys/zlib"]
 	path = librocksdb-sys/zlib
 	url = https://github.com/madler/zlib.git
+[submodule "rocksdb_sys/rocksdb"]
+	path = librocksdb-sys/rocksdb
+	url = https://github.com/leoncamel/rocksdb-cloud.git
