--- a/librocksdb-sys/Cargo.toml
+++ b/librocksdb-sys/Cargo.toml
@@ -19,6 +19,8 @@ lz4 = []
 zstd = []
 zlib = []
 bzip2 = []
+librdkafka = []
+aws-sdk-cpp = []
 
 [dependencies]
 libc = "0.2"
@@ -31,3 +33,4 @@ uuid = { version = "0.8", features = ["v4"] }
 cc = { version = "1.0", features = ["parallel"] }
 bindgen = { version = "0.58.1", default-features = false, features = ["runtime"] }
 glob = "0.3"
+cmake = "0.1"
